<resources>
    <string name="app_name">uBlock</string>
    <string name="enable_usage_stats_message">Please enable the use of statistics for better application performance.</string>
    <string name="title_notification">uBlock is running correctly.</string>
    <string name="text_notification">Tap here for more info.</string>
    <string name="title_activity_applications_list">Applications List</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="security_action_settings">Security Settings</string>
    <string name="style_action_settings">Style Settings</string>
    <string name="more_action_settings">Developer &amp; more</string>
    <string name="slide_one_message">uBlock allows you to directly change the way that you want to unlock the device, with just a simple swipe. The only thing that you have to do is swipe your finger on the edge of the unlock method of your preferred side (left / right).</string>
    <string name="slide_two_message">The default pin value is \"0000\", if you want to change the default pin in this moment, press the image below. Otherwise you could make the change after in settings window.</string>
    <string name="slide_three_message">The default password value is \"0000\", the keyboard is displayed automatically for you comfort, if you want to change the default password in this moment, press the image below. Otherwise you could make the change after in settings window.</string>
    <string name="slide_four_message">The default gesture of the pattern is a simple line on the first three dots, if you want to change the default pattern in this moment, press the image below. Otherwise you could make the change after in settings window.</string>
    <string name="slide_five_message">The default finger is any of your registered fingers previously, if you want to set a specific index or add a new finger, press the image below. Otherwise you could make the change after in settings window.</string>
    <string name="repeat_slides_messages">Do you want to repeat slides?</string>
    <string name="open">Open</string>
    <string name="uninstall">Uninstall</string>
    <string name="please_press_back_again">Press BACK again to exit</string>
    <string name="open_uninstall_message_dialog">What do you want do?</string>
    <string name="block_app_installed_message">Do you want to block the new app installed?</string>
    <string name="security_settings_header">Security</string>
    <string name="security_voice_command_settings">Voice command</string>
    <string name="security_password_settings">Password</string>
    <string name="security_pin_settings">Pin</string>
    <string name="security_pattern_settings">Pattern</string>
    <string name="security_finger_print_settings">Fingerprint</string>
    <string name="more_settings">More</string>
    <string name="style_background_settings">Background</string>
    <string name="style_theme_settings">Colors</string>
    <string name="style_font_settings">Font</string>
    <string name="contact_developer_settings">Contact me</string>
    <string name="report_bug_settings">Send bug report</string>
    <string name="check_update_settings">Check for updates</string>
    <string name="current_version">Current version: v%s</string>
    <string name="add_photo">Click to\nAdd photo</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="invalid_input">Invalid input</string>
    <string name="done">Done</string>
    <string name="wrong_password_is_not_equal">The passwords doesn\'t match, please try again</string>
    <string name="show_hide_password">Show/Hide password.</string>
    <string name="title_activity_update_passwords">Password Settings</string>
    <string name="pin">Pin</string>
    <string name="confirm_pin">Confirm pin</string>
    <string name="show_hide_pin">Show/Hide pin.</string>
    <string name="wrong_pin_is_not_equal">The pin doesn\'t match, please try again</string>
    <string name="reset">Reset</string>
    <string name="new_pattern_request">Draw a new pattern to unlock:</string>
    <string name="repeat_pattern_request">Repeat the pattern please:</string>
    <string name="pattern_correct_message">Pattern correct, press OK button to save</string>
    <string name="patterns_doesnt_match_message">The patterns doesn\'t match, please try again:</string>
    <string name="title_activity_pin_settings">Pin Settings</string>
    <string name="title_activity_pattern_settings">Pattern Settings</string>
    <string name="title_activity_advanced_options">Advanced Options</string>
    <string name="enable_notification_on_status_bar_option">Show notification on status bar.</string>
    <string name="enable_swipe_on_ublock_screen_option">Enable swipe on uBlock screen.</string>
    <string name="is_pattern_visible_option">Show pattern on uBlock screen.</string>
    <string name="fingerprint_on_top_option">Show fingerprint detector when starting functions related to this.</string>
    <string name="enable_icon_on_app_drawer_option">Show icon on app drawer.</string>
    <string name="lock_apps_after_screen_off_option">Block applications after the screen turns off.</string>
    <string name="title_activity_advanced_options_preference">AdvancedOptionsPreferenceActivity</string>
    <string name="title_activity_advanced_options_settings">Advanced Options</string>
    <string name="title_activity_fingerprint_settings">Fingerprint Settings</string>
    <string name="anyone">Anyone</string>
    <string name="number_of_fingerprints_registered">Number of fingerprints registered</string>
    <string name="number_of_fingerprints_registered_description">Number of fingerprints registered:</string>
    <string name="register_new_fingerprint">Register new fingerprint</string>
    <string name="register_new_fingerprint_description">Set a new fingerprint to unlock apps.</string>
    <string name="fingerprint_index_to_unlock">Fingerprint index</string>
    <string name="fingerprint_index_to_unlock_description">Fingerprint index selected to unlock apps:</string>
    <string name="updated_app_available_message">There is a update on uBlock, do you want to install it?</string>
    <string name="updated_app_available">uBlock update available.</string>
    <string name="please_wait_auto_update">Please wait, auto update in progress.</string>
    <string name="there_isnt_updated_app_available">Still no updates.</string>
    <string name="check_for_update_message">Checking for update, please wait…</string>
    <string name="show_dialog_when_new_apps_are_installed_option">Show dialog when new applications are installed.</string>
    <string name="fingerprint_service_is_not_supported">Fingerprint Service is not supported in the device</string>
    <string name="icon_on_app_drawer_message">Hiding the icon from the application drawer, you should call *#*#123#*#* to launch the application, the application will close automatically.</string>
    <string name="title_activity_font">Font Settings</string>
    <string name="title_activity_background_settings">Background Settings</string>
    <string name="primary_color">Primary Color</string>
    <string name="primary_dark_color">Primary Dark Color</string>
    <string name="accent_color">Accent Color</string>
    <string name="primary_text_color">Primary Text Color</string>
    <string name="secondary_text_color">Secondary Text Color</string>
    <string name="title_activity_theme">Theme Settings</string>
    <string name="choose_color_request">Click here and choose your favorite color</string>
    <string name="automatic_color_summary">This color is automatically generated</string>
    <string name="current_wallpaper">System wallpaper</string>
    <string name="choose_background">Choose picture</string>
    <string name="take_photo">Take a photo</string>
    <string name="blur_effect">Blur effect</string>
    <string name="media">Media</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="background_name">Wallpaper.png</string>
    <string name="image_saved_correctly">Image saved correctly in: </string>
    <string name="file_selected_in">File selected in: </string>
    <string name="title_activity_crop_image_view">Background Settings</string>
    <string name="orientation">Orientation</string>
    <string name="close">Close</string>
    <string name="crop">Crop</string>
    <string name="saving_background">Processing, please wait…</string>
    <string name="connecting_with_server">Connecting with server…</string>
    <string name="download_progress">Progress: %1$s/%2$s</string>
    <string name="ublock_is_updating">uBlock is updating, please wait…</string>
    <string name="title_activity_set_user_photo">User Photo</string>
    <string name="user_picture_name">User.png</string>
    <string name="crash_toast_text">There has been an unexpected failure :(</string>
    <string name="crash_dialog_title">uBlock has crashed</string>
    <string name="crash_dialog_text">An error caused the application to crash, please send an email with the description of the error in the inputs below to fix it as quickly as possible.</string>
    <string name="crash_dialog_comment_prompt">Enter your comments regarding the problem:</string>
    <string name="crash_dialog_ok_toast">Thank you!</string>
    <string name="crash_user_email_label">Enter your email:</string>
    <string name="max_blur_effect_value">25</string>
    <string name="lic_open_source">Lic. open source</string>
    <string name="exit">Exit</string>
    <string name="feature_not_supported">This feature is not supported in this device</string>
    <string name="configure_initial_settings">Please configure security settings</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="send_bug_report_settings">Send bug report</string>
    <string name="picture_source">Where do you want to get the picture?</string>
    <string name="from_gallery">Gallery</string>
    <string name="from_camera">Camera</string>
    <string name="crop_picture">Crop picture</string>
    <string name="blur">Blur</string>
    <string name="change_background_ublock_screen_option">Change the background of uBlock screen dynamically.</string>
    <string name="change_background_ublock_screen_message">This option will delete the image you have placed in the background.</string>
    <string name="support_email">uappssystemservice@gmail.com</string>
    <string name="bug_report_subject">Bug report on %1$s v%2$s</string>
    <string name="enable_permissions_request">You must enable certain permissions for the application to work correctly.</string>
    <string name="usage_stats_permission">Allow the use of statistics</string>
    <string name="draw_over_other_apps_permission">Allow draw over other apps</string>
    <string name="number">*#*#123#*#*</string>
    <string name="custom_font">Roboto</string>
    <string name="default_code">0000</string>
    <string name="default_pattern">123</string>
    <string name="button1_large_text">1</string>
    <string name="button2_large_text">2</string>
    <string name="button2_small_text">ABC</string>
    <string name="button3_large_text">3</string>
    <string name="button3_small_text">DEF</string>
    <string name="button4_large_text">4</string>
    <string name="button4_small_text">GHI</string>
    <string name="button5_large_text">5</string>
    <string name="button5_small_text">JKL</string>
    <string name="button6_large_text">6</string>
    <string name="button6_small_text">MNO</string>
    <string name="button7_large_text">7</string>
    <string name="button7_small_text">PQRS</string>
    <string name="button8_large_text">8</string>
    <string name="button8_small_text">TUV</string>
</resources>