<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.arrg.app.ublock.views.uviews.UColorPreference
        android:key="primary_color"
        android:persistent="false"
        android:summary="@string/choose_color_request"
        android:title="@string/primary_color" />

    <com.arrg.app.ublock.views.uviews.UColorPreference
        android:key="primary_dark_color"
        android:persistent="false"
        android:summary="@string/automatic_color_summary"
        android:title="@string/primary_dark_color" />

    <com.arrg.app.ublock.views.uviews.UColorPreference
        android:key="accent_color"
        android:persistent="false"
        android:summary="@string/automatic_color_summary"
        android:title="@string/accent_color" />

    <com.arrg.app.ublock.views.uviews.UColorPreference
        android:key="primary_text_color"
        android:persistent="false"
        android:summary="@string/automatic_color_summary"
        android:title="@string/primary_text_color" />

    <com.arrg.app.ublock.views.uviews.UColorPreference
        android:key="secondary_text_color"
        android:persistent="false"
        android:summary="@string/automatic_color_summary"
        android:title="@string/secondary_text_color" />
</PreferenceScreen>