<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arrg.app.ublock.views.CropImageViewActivity">

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.isseiaoki.simplecropview.CropImageView xmlns:custom="http://schemas.android.com/apk/res-auto"
            android:id="@+id/crop_imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            custom:cropMode="ratio_9_16"
            custom:handleColor="@android:color/transparent"
            custom:handleShowMode="not_show"
            custom:handleSize="25dp"
            custom:overlayColor="@color/glass_50" />

        <View
            android:layout_width="match_parent"
            android:layout_height="75dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/background_tools"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_alignParentBottom="true"
            android:background="@color/glass_10"
            android:baselineAligned="false"
            android:visibility="visible">

            <com.arrg.app.ublock.views.uviews.UButton
                android:id="@+id/rotate"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_bar_style_glass"
                android:drawableTop="@drawable/ic_rotate_90_degrees"
                android:gravity="center"
                android:text="@string/orientation"
                android:textColor="@color/background_light"
                android:textSize="12sp" />

            <com.arrg.app.ublock.views.uviews.UButton
                android:id="@+id/blur"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_bar_style_glass"
                android:drawableTop="@drawable/ic_blur_on"
                android:gravity="center"
                android:text="@string/blur_effect"
                android:textColor="@color/background_light"
                android:textSize="12sp" />

            <com.arrg.app.ublock.views.uviews.UButton
                android:id="@+id/done"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_bar_style_glass"
                android:drawableTop="@drawable/ic_done"
                android:gravity="center"
                android:text="@string/done"
                android:textColor="@color/background_light"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/blur_effect_radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/background_tools"
            android:layout_margin="5dp"
            android:background="@color/glass_10"
            android:visibility="invisible">

            <com.arrg.app.ublock.views.uviews.UTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/blur"
                android:textAppearance="@style/Base.TextAppearance.AppCompat"
                android:textColor="@color/background_light" />

            <SeekBar
                android:id="@+id/seekBar_radius"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:max="25"
                android:padding="10dp" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
